// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders 1`] = `
<H1>
  <InnerText
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderColor": "#657786",
        "borderRadius": 2,
        "borderStyle": "solid",
        "borderWidth": 2,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderColor": "#657786",
            "borderRadius": 2,
            "borderStyle": "solid",
            "borderWidth": 2,
            "color": "#48484D",
            "cursor": "inherit",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H1>
`;

exports[`H2 renders 1`] = `
<H2>
  <InnerText
    style={
      Object {
        "backgroundColor": "#009688",
        "backgroundImage": "url(\\"data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmVyc2lvbj0iMS4xIgogICB2aWV3Qm94PSIwIDAgMSAxIgogICBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJ4TWluWU1pbiBtZWV0Ij4KICA8cGF0aAogICAgIGQ9Ik0gMC4wNDAzODA1OSwwLjYyNjc3NjcgMC4xNDY0NDY2MSwwLjUyMDcxMDY4IDAuNDI5Mjg5MzIsMC44MDM1NTMzOSAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IE0gMC4yMTcxNTcyOSwwLjgwMzU1MzM5IDAuODUzNTUzMzksMC4xNjcxNTcyOSAwLjk1OTYxOTQxLDAuMjczMjIzMyAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IgogICAgIGlkPSJyZWN0Mzc4MCIKICAgICBzdHlsZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K\\")",
        "backgroundRepeat": "no-repeat",
        "borderColor": "#009688",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundColor": "#009688",
            "backgroundImage": "url(\\"data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9Im5vIj8+CjxzdmcKICAgeG1sbnM6ZGM9Imh0dHA6Ly9wdXJsLm9yZy9kYy9lbGVtZW50cy8xLjEvIgogICB4bWxuczpjYz0iaHR0cDovL2NyZWF0aXZlY29tbW9ucy5vcmcvbnMjIgogICB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiCiAgIHhtbG5zOnN2Zz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciCiAgIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIKICAgdmVyc2lvbj0iMS4xIgogICB2aWV3Qm94PSIwIDAgMSAxIgogICBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSJ4TWluWU1pbiBtZWV0Ij4KICA8cGF0aAogICAgIGQ9Ik0gMC4wNDAzODA1OSwwLjYyNjc3NjcgMC4xNDY0NDY2MSwwLjUyMDcxMDY4IDAuNDI5Mjg5MzIsMC44MDM1NTMzOSAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IE0gMC4yMTcxNTcyOSwwLjgwMzU1MzM5IDAuODUzNTUzMzksMC4xNjcxNTcyOSAwLjk1OTYxOTQxLDAuMjczMjIzMyAwLjMyMzIyMzMsMC45MDk2MTk0MSB6IgogICAgIGlkPSJyZWN0Mzc4MCIKICAgICBzdHlsZT0iZmlsbDojZmZmZmZmO2ZpbGwtb3BhY2l0eToxO3N0cm9rZTpub25lIiAvPgo8L3N2Zz4K\\")",
            "backgroundRepeat": "no-repeat",
            "borderColor": "#009688",
            "color": "#48484D",
            "cursor": "inherit",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H2>
`;

exports[`H3 renders 1`] = `
<H3>
  <InnerText
    style={
      Object {
        "borderColor": "#CCD6DD",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "borderColor": "#CCD6DD",
            "color": "#48484D",
            "cursor": "inherit",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1kk9pjb rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</H3>
`;

exports[`Link renders 1`] = `
<Link>
  <InnerText
    style={
      Object {
        "height": 5,
        "overflow": "hidden",
        "userSelect": "none",
        "zIndex": 0,
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "color": "#48484D",
            "cursor": "inherit",
            "height": 5,
            "overflow": "hidden",
            "userSelect": "none",
            "zIndex": 0,
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Link>
`;

exports[`Monospace renders 1`] = `
<Monospace>
  <InnerText
    style={
      Object {
        "height": 5,
        "overflow": "hidden",
        "userSelect": "none",
        "zIndex": 0,
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "color": "#48484D",
            "cursor": "inherit",
            "height": 5,
            "overflow": "hidden",
            "userSelect": "none",
            "zIndex": 0,
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Monospace>
`;

exports[`Subtitle renders 1`] = `
<Subtitle>
  <InnerText
    style={
      Object {
        "bottom": 0,
        "height": "100%",
        "left": 0,
        "margin": 0,
        "opacity": 0,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "bottom": 0,
            "color": "#48484D",
            "cursor": "inherit",
            "height": "100%",
            "left": 0,
            "margin": 0,
            "opacity": 0,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Subtitle>
`;

exports[`Title renders 1`] = `
<Title>
  <InnerText
    style={
      Object {
        "backgroundColor": "#AAB8C2",
        "borderColor": "#AAB8C2",
      }
    }
  >
    <GetTheme>
      <Text
        style={
          Object {
            "backgroundColor": "#AAB8C2",
            "borderColor": "#AAB8C2",
            "color": "#48484D",
            "cursor": "inherit",
          }
        }
      >
        <div
          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
          dir="auto"
          style={
            Object {
              "color": "rgba(72,72,77,1)",
            }
          }
        >
          hello
        </div>
      </Text>
    </GetTheme>
  </InnerText>
</Title>
`;
